# sorting_analysis

./: .gitignore
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/: MyButton.js  MyDataSelection.js  MySort.js  MySortsList.js  MyTextField.js  MyTypography.js
client/src/components/UI/: MyAutoComplete.js  MyButton.js  MyCheckBox.js  MyTextFieldNumber.js  MyTypography.js
client/src/hooks/: http.hook.js  useLocalStorage.hook.js
client/src/pages/: MainPage.js  TestPage.js  TestTwoPage.js  TextAboutSortingPage.js  testws.js
server/: get_url_video.py  requriments.txt  server.py  url_videos.txt
server/function/: create_graph.py
server/libc/: CMakeLists.txt  example.py
server/libc/include/: sorts_python.h
server/libc/source/: CMakeLists.txt
server/libc/source/data_structures/: CMakeLists.txt
server/libc/source/data_structures/dynamic_array/: CMakeLists.txt  dynamic_array.c  dynamic_array.h
server/libc/source/data_structures/hash_table/: hash_table.h
server/libc/source/sorts/: CMakeLists.txt  sorts.c  sorts.h
server/libc/source/utils/: CMakeLists.txt
server/libc/source/utils/allocator/: CMakeLists.txt  allocator.c  allocator.h
server/libc/source/utils/error/: CMakeLists.txt  error.h
server/libc/source/utils/memory/: CMakeLists.txt  memory.c  memory.h
server/libc/source/utils/swap/: CMakeLists.txt  swap.c  swap.h
server/libc/source/utils/timer/: CMakeLists.txt  timer.h
